--- a/Description
+++ b/Description
@@ -1,1 +1,5 @@
 This script will create a bubble bar to represent the relative abundance of a microbiome
+
+The input file was modified in Excel and saved as CSV file
+
+
