--- a/Description
+++ b/Description
@@ -1,5 +1,7 @@
-This script will create a bubble bar to represent the relative abundance of a microbiome
+# Bubblee bar in R Studio 
 
-The input file was modified in Excel and saved as CSV file
+## This script will create a bubble bar to represent the relative abundance of a microbiome
+
+### The input file was modified in Excel and saved as CSV file
 
 
